Move Mode and State to TLO

--- a/config/Bot_Whatapal.ini
+++ b/config/Bot_Whatapal.ini
@@ -14,7 +14,7 @@ OverrideOnMove=TRUE
 OverrideSeconds=10
 
 [Default:Melee]
-Enabled=TRUE
+Enabled=FALSE
 EngageTargetHpPct=100
 EngageTargetDistance=75
 
@@ -26,13 +26,13 @@ BackoffTimer=300
 
 
 [Default]
-SpellBar=1:salve1,2:light2,3:OPEN,4:OPEN,5:OPEN,6:OPEN,7:OPEN,8:OPEN
+SpellBar=1:heal,2:aggro,3:stun,4:OPEN,5:OPEN,6:OPEN,7:OPEN,8:OPEN
 
 [Default:DD]
 Enabled=FALSE
 MinMana=50
 MinTargetHpPct=0
-Pcts=light2:100
+Pcts=stun:100,stun:50
 
 [Default:Dot]
 Enabled=FALSE
@@ -43,6 +43,10 @@ Pcts=aggro:100
 
 [Spells]
 aggro=Utility Detrimental,Blind,Single
+heal=Heals,Heals,Single
+stun=Direct Damage,Stun,Single
 
 salve1=            Salve                              ;Heals,Heals,Single
 light2=            Flash of Light                     ;Utility Detrimental,Blind,Single
+cease7=            Cease                              ;Direct Damage,Stun,Single
+healing6=          Minor Healing                      ;Heals,Heals,Single
