--- a/config/Bot_Yaladil.ini
+++ b/config/Bot_Yaladil.ini
@@ -1,7 +1,7 @@
 [State]
-Mode=2
+Mode=4
 Flags=CC2
-Tether=12940
+Tether=-2065.01, -1795.00, -473.54
 
 [Default:CastQueue]
 Print=TRUE
@@ -66,7 +66,7 @@ Self=b_groupmanaregen,aura55,b_selfshield
 
 [Mode:4:Buff]
 MainTank=
-Bard=b_haste
+Bard=
 Pet=b_haste
 Self=b_groupmanaregen,b_grouphaste,elemental33,aura55,b_ac,b_selfshield
 Selfpet=garou40,b_haste
