Fixed bug where buffs would not go to group member's pet

--- a/config/Bot_Yaladil.ini
+++ b/config/Bot_Yaladil.ini
@@ -65,8 +65,8 @@ Self=b_groupmanaregen,aura55,b_selfshield
 ;Healer=levitate15,invisibility4
 
 [Mode:4:Buff]
-MainTank=
-Bard=
+;MainTank=
+;Bard=
 Pet=b_haste
 Self=b_groupmanaregen,b_grouphaste,elemental33,aura55,b_ac,b_selfshield
 Selfpet=garou40,b_haste
