Added item and alt to buffbot

--- a/config/Bot_Whatapal.ini
+++ b/config/Bot_Whatapal.ini
@@ -1,6 +1,7 @@
 [State]
 Mode=2
 Flags=
+Tether=NONE
 
 [Default:CastQueue]
 Print=TRUE
@@ -19,17 +20,23 @@ EngageTargetHpPct=100
 EngageTargetDistance=75
 
 [Default:Buff]
-Enabled=FALSE
+Enabled=TRUE
 MinMana=50
 Backoff=TRUE
 BackoffTimer=300
 
+[Default:TeamEvents]
+OnPullStart=
+OnPullEnd=
+OnPreEngage=
+OnEngage=/dbcq queue -spell|Statistic Buffs,Attack,Self -priority|49 -max_tries|3 -unique|true
+
 
 [Default]
-SpellBar=1:heal,2:aggro,3:stun,4:OPEN,5:OPEN,6:OPEN,7:OPEN,8:OPEN
+SpellBar=1:heal,2:aggro,3:stun,4:b_combat,5:OPEN,6:OPEN,7:OPEN,8:OPEN
 
 [Default:DD]
-Enabled=FALSE
+Enabled=TRUE
 MinMana=50
 MinTargetHpPct=0
 Pcts=stun:100,stun:50
@@ -41,7 +48,23 @@ MinTargetHpPct=30
 Pcts=aggro:100
 
 
+[Mode:2:Buff]
+Self=b_ac,b_speed
+
+[Mode:3:Buff]
+Self=b_ac
+
+[Mode:4:Buff]
+Self=b_ac,b_xp
+
+
 [Spells]
+b_ac=HP Buffs,HP type one,Single
+b_combat=Statistic Buffs,Attack,Self
+
+b_speed=Item,Worn Totem,Blessing of Swiftness
+b_xp=Alt,Lesson of the Devoted
+
 aggro=Utility Detrimental,Blind,Single
 heal=Heals,Heals,Single
 stun=Direct Damage,Stun,Single
@@ -50,3 +73,10 @@ salve1=            Salve                              ;Heals,Heals,Single
 light2=            Flash of Light                     ;Utility Detrimental,Blind,Single
 cease7=            Cease                              ;Direct Damage,Stun,Single
 healing6=          Minor Healing                      ;Heals,Heals,Single
+poison5=           Cure Poison                        ;Heals,Cure,Single
+courage8=          Courage                            ;HP Buffs,HP type one,Single
+yaulp9=            Yaulp                              ;Statistic Buffs,Attack,Self
+dead9=             Spook the Dead                     ;Utility Detrimental,Fear,Undead
+lull10=            Lull                               ;Utility Detrimental,Calm,Single
+disease11=         Cure Disease                       ;Heals,Cure,Single
+healing12=         Light Healing                      ;Heals,Heals,Single
