--- a/config/Sample.ini
+++ b/config/Sample.ini
@@ -144,6 +144,9 @@ Spell=s_mez
 
 ;;; --- Individual spells will be populated automatically by the bot
 [Spells]
+b_speed=Item,Worn Totem,Blessing of Swiftness
+b_xp=Alt,Lesson of the Devoted
+
 dd_cold=Direct Damage,Cold,Single
 dd_poi=Direct Damage,Poison,Single
 dd_fire=Direct Damage,Fire,Single
