Redid spell aquisition from config

--- a/config/Bot_Xamox.ini
+++ b/config/Bot_Xamox.ini
@@ -164,3 +164,6 @@ pain63=            Aura of Pain                       ;Taps,Power Tap,Single
 thule63=           Terror of Thule                    ;Utility Detrimental,Jolt,Single
 chaos63=           Shroud of Chaos                    ;Utility Beneficial,Combat Innates,Self
 hate63=            Blood of Hate                      ;Damage Over Time,Poison,Single
+death64=           Invoke Death                       ;Pet,Sum: Undead,Self
+decay64=           Spear of Decay                     ;Direct Damage,Disease,Single
+undead62=          Deny Undead                        ;Direct Damage,Undead,Undead
