Moved crowdcontrolbot and debuff bot back into main process

--- a/config/Bot_Efotsi.ini
+++ b/config/Bot_Efotsi.ini
@@ -1,6 +1,7 @@
 [State]
 Mode=2
 Flags=
+Tether=17122
 
 [Default:CastQueue]
 Print=TRUE
@@ -53,7 +54,7 @@ MinTargetHpPct=65
 Pcts=db_slow:100
 
 [Default:Dot]
-Enabled=TRUE
+Enabled=FALSE
 MinMana=60
 MinTargetHpPct=65
 Pcts=dot_dis:100,dot_poi:94
@@ -67,13 +68,14 @@ Self=fire1,b_sta
 
 [Mode:3:Buff]
 MainTank=wolf9,levitate10,fire1,b_sta
-Melee=wolf9,levitate10,fire1
+Melee=wolf9,levitate10,fire1,b_str
 Caster=wolf9,levitate10,fire1
 Self=wolf9,levitate10,fire1,b_sta
 
 [Mode:4:Buff]
-MainTank=wolf9,fire1,b_dex,b_str,b_sta,b_ac
-Melee=fire1
+MainTank=fire1,b_dex,b_str,b_sta,b_ac,b_agi
+Puller=wolf9
+Melee=fire1,b_str
 Caster=fire1
 Self=fire1,b_sta
 
@@ -136,3 +138,6 @@ cloud15=           Infectious Cloud                   ;Damage Over Time,Disease,
 strike14=          Spirit Strike                      ;Direct Damage,Cold,Single
 sleep13=           Walking Sleep                      ;Utility Detrimental,Slow,Single
 disempower12=      Disempower                         ;Utility Detrimental,Disempowering,Single
+cat18=             Spirit of Cat                      ;Statistic Buffs,Agility,Single
+strength18=        Spirit Strength                    ;Statistic Buffs,Strength,Single
+malaise18=         Malaise                            ;Utility Detrimental,Resist Debuffs,Single
