--- a/config/Bot_Pystoffe.ini
+++ b/config/Bot_Pystoffe.ini
@@ -1,6 +1,7 @@
 [State]
 Mode=2
 Flags=
+Tether=17122
 
 [Default:AutoSit]
 Enabled=TRUE
@@ -15,7 +16,7 @@ EngageTargetHPs=98
 EngageTargetDistance=105
 
 [Default]
-SpellBar=1:arms10,2:restoration6,3:battle1,4:rhythms9,5:warsong7,6:OPEN,7:OPEN,8:accelerando5
+SpellBar=1:s_mez,2:arms10,3:restoration6,4:battle1,5:rhythms17,6:warsong7,7:sustenance15,8:accelerando5
 
 [Default:Buff]
 Enabled=FALSE
@@ -23,37 +24,74 @@ MinMana=0
 Self=
 
 [Default:CrowdControl]
-Enabled=FALSE
+Enabled=TRUE
 IAmPrimary=FALSE
 MinMana=0
 Spell=s_mez
 
 
-[Mode:2]
-SpellBar=
+; [Mode:2]
+; SpellBar=
 
 [Mode:2:Twist]
 Enabled=TRUE
-Order=restoration6,accelerando5 ; 2,8
-CombatOrder=arms10,restoration6,battle1,rhythms9,warsong7 ; 1,2,3,4,5
+Order=accelerando5,restoration6,sustenance15 ; 8,2,7
+CombatOrder=arms10,restoration6,battle1,rhythms17,warsong7 ; 1,2,3,4,5
 
 
-[Mode:3]
-SpellBar=
+; [Mode:3]
+; SpellBar=
 
 [Mode:3:Twist]
 Enabled=TRUE
-Order=restoration6,accelerando5 ; 2,8
-CombatOrder=arms10,restoration6,battle1,rhythms9,warsong7 ; 1,2,3,4,5
+Order=accelerando5,restoration6,sustenance15 ; 8,2,7
+CombatOrder=arms10,restoration6,battle1,rhythms17,warsong7 ; 1,2,3,4,5
 
 
-[Mode:4]
-SpellBar=
+; [Mode:4]
+; SpellBar=
 
 [Mode:4:Twist]
 Enabled=TRUE
-Order=restoration6,accelerando5 ; 2,8
-CombatOrder=arms10,restoration6,battle1,rhythms9,warsong7 ; 1,2,3,4,5
+Order=accelerando5,restoration6,sustenance15 ; 8,2,7
+CombatOrder=arms10,restoration6,battle1,rhythms17,warsong7 ; 1,2,3,4,5
+
+
+[Flag:ElementalProtection]
+SpellBar=7:rhythms9
+[Flag:2:Underwater:Twist]
+Order=accelerando5,restoration6,sustenance15 ; 8,2,7
+Order=arms10,restoration6,battle1,rhythms9,warsong7 ; 1,2,3,4,5
+[Flag:3:Underwater:Twist]
+Order=accelerando5,restoration6,sustenance15 ; 8,2,7
+Order=arms10,restoration6,battle1,rhythms9,warsong7 ; 1,2,3,4,5
+[Flag:4:Underwater:Twist]
+Order=accelerando5,restoration6,sustenance15 ; 8,2,7
+Order=arms10,restoration6,battle1,rhythms9,warsong7 ; 1,2,3,4,5
+
+[Flag:DiseaseProtection]
+SpellBar=7:rhythms13
+[Flag:2:Underwater:Twist]
+Order=accelerando5,restoration6,sustenance15 ; 8,2,7
+Order=arms10,restoration6,battle1,rhythms13,warsong7 ; 1,2,3,4,5
+[Flag:3:Underwater:Twist]
+Order=accelerando5,restoration6,sustenance15 ; 8,2,7
+Order=arms10,restoration6,battle1,rhythms13,warsong7 ; 1,2,3,4,5
+[Flag:4:Underwater:Twist]
+Order=accelerando5,restoration6,sustenance15 ; 8,2,7
+Order=arms10,restoration6,battle1,rhythms13,warsong7 ; 1,2,3,4,5
+
+[Flag:Underwater]
+SpellBar=8:ayre16
+[Flag:2:Underwater:Twist]
+Order=restoration6,ayre16
+Order=arms10,restoration6,battle1,rhythms17,warsong7,ayre16
+[Flag:3:Underwater:Twist]
+Order=restoration6,ayre16
+Order=arms10,restoration6,battle1,rhythms17,warsong7,ayre16
+[Flag:4:Underwater:Twist]
+Order=restoration6,ayre16
+Order=arms10,restoration6,battle1,rhythms17,warsong7,ayre16
 
 
 [Spells]
@@ -68,3 +106,9 @@ lament8=           Kelin's Lugubrious Lament          ;Utility Detrimental,Calm,
 rhythms9=          Elemental Rhythms                  ;Statistic Buffs,Resist Buff,Group v2
 lyric4=            Lyssa's Locating Lyric             ;Utility Beneficial,Misc,Self
 arms10=            Anthem de Arms                     ;Utility Beneficial,Haste,Group v2
+bellow12=          Brusco's Boastful Bellow           ;Direct Damage,Magic,Single
+rhythms17=         Guardian Rhythms                   ;Statistic Buffs,Resist Buff,Group v2
+ayre16=            Tarew's Aquatic Ayre               ;Utility Beneficial,Misc,Group v2
+lullaby15=         Kelin's Lucid Lullaby              ;Utility Detrimental,Enthrall,Single
+sustenance15=      Song of Sustenance                 ;Utility Beneficial,Misc,Group v2
+rhythms13=         Purifying Rhythms                  ;Statistic Buffs,Resist Buff,Group v2
