--- a/config/Bot_Timmaayy.ini
+++ b/config/Bot_Timmaayy.ini
@@ -1,6 +1,7 @@
 [State]
 Mode=2
 Flags=
+Tether=NONE
 
 [Default:CastQueue]
 Print=TRUE
@@ -141,3 +142,4 @@ warp16=            Sanity Warp                        ;Direct Damage,Magic,Singl
 disempower16=      Disempower                         ;Utility Detrimental,Disempowering,Single
 shielding16=       Shielding                          ;HP Buffs,Shielding,Self
 cloud17=           Cloud                              ;Statistic Buffs,Armor Class,Single
+breath12=          Enduring Breath                    ;Utility Beneficial,Misc,Single
