--- a/config/Bot_Whatapal.ini
+++ b/config/Bot_Whatapal.ini
@@ -33,7 +33,17 @@ OnEngage=/dbcq queue -spell|Statistic Buffs,Attack,Self -priority|49 -max_tries|
 
 
 [Default]
-SpellBar=1:heal,2:aggro,3:stun,4:b_combat,5:OPEN,6:OPEN,7:OPEN,8:OPEN
+SpellBar=1:s_heal,2:aggro,3:stun,4:b_combat,5:OPEN,6:OPEN,7:OPEN,8:OPEN
+
+[Default:Heal]
+Enabled=TRUE
+MinMana=0
+Tank=s_heal:60
+Melee=
+Caster=
+Pet=
+Self=s_heal:60
+Selfpet=
 
 [Default:DD]
 Enabled=TRUE
@@ -66,7 +76,7 @@ b_speed=Item,Worn Totem,Blessing of Swiftness
 b_xp=Alt,Lesson of the Devoted
 
 aggro=Utility Detrimental,Blind,Single
-heal=Heals,Heals,Single
+s_heal=Heals,Heals,Single
 stun=Direct Damage,Stun,Single
 
 salve1=            Salve                              ;Heals,Heals,Single
