Implemented action queue Major refactor

--- a/config/Bot_Pystoffe.ini
+++ b/config/Bot_Pystoffe.ini
@@ -1,7 +1,7 @@
 [State]
 Mode=2
 Flags=
-Tether=17122
+Tether=219
 
 [Default:AutoSit]
 Enabled=TRUE
@@ -13,10 +13,10 @@ OverrideSeconds=10
 [Default:Melee]
 Enabled=TRUE
 EngageTargetHPs=98
-EngageTargetDistance=105
+EngageTargetDistance=150
 
 [Default]
-SpellBar=1:s_mez,2:arms10,3:restoration6,4:battle1,5:rhythms17,6:warsong7,7:sustenance15,8:accelerando5
+SpellBar=1:s_mez,2:arms10,3:clarity20,4:amplification30,5:rhythms17,6:warsong7,7:sustenance15,8:accelerando5
 
 [Default:Buff]
 Enabled=FALSE
@@ -35,8 +35,8 @@ Spell=s_mez
 
 [Mode:2:Twist]
 Enabled=TRUE
-Order=accelerando5,restoration6,sustenance15 ; 8,2,7
-CombatOrder=arms10,restoration6,battle1,rhythms17,warsong7 ; 1,2,3,4,5
+Order=accelerando5,clarity20,sustenance15 ; 8,3,7
+CombatOrder=amplification30,accelerando5,arms10,clarity20,rhythms17,warsong7 ; 4,8,2,3,5,6
 
 
 ; [Mode:3]
@@ -44,54 +44,54 @@ CombatOrder=arms10,restoration6,battle1,rhythms17,warsong7 ; 1,2,3,4,5
 
 [Mode:3:Twist]
 Enabled=TRUE
-Order=accelerando5,restoration6,sustenance15 ; 8,2,7
-CombatOrder=arms10,restoration6,battle1,rhythms17,warsong7 ; 1,2,3,4,5
+Order=accelerando5,clarity20,sustenance15 ; 8,3,7
+CombatOrder=amplification30,accelerando5,arms10,clarity20,rhythms17,warsong7 ; 4,8,2,3,5,6
 
 
-; [Mode:4]
-; SpellBar=
+[Mode:4]
+SpellBar=3:clarity20,8:chain23
 
 [Mode:4:Twist]
 Enabled=TRUE
-Order=accelerando5,restoration6,sustenance15 ; 8,2,7
-CombatOrder=arms10,restoration6,battle1,rhythms17,warsong7 ; 1,2,3,4,5
+Order=clarity20,sustenance15 ; 3,7
+CombatOrder=amplification30,chain23,arms10,clarity20,chain23,rhythms17,warsong7 ; 4,8,2,3,8,5,6
 
 
 [Flag:ElementalProtection]
-SpellBar=7:rhythms9
+SpellBar=5:rhythms9
 [Flag:2:Underwater:Twist]
 Order=accelerando5,restoration6,sustenance15 ; 8,2,7
-Order=arms10,restoration6,battle1,rhythms9,warsong7 ; 1,2,3,4,5
+CombatOrder=amplification30,arms10,restoration6,rhythms9,warsong7 ; 4,1,2,3,5
 [Flag:3:Underwater:Twist]
 Order=accelerando5,restoration6,sustenance15 ; 8,2,7
-Order=arms10,restoration6,battle1,rhythms9,warsong7 ; 1,2,3,4,5
+CombatOrder=amplification30,arms10,restoration6,rhythms9,warsong7 ; 4,1,2,3,5
 [Flag:4:Underwater:Twist]
 Order=accelerando5,restoration6,sustenance15 ; 8,2,7
-Order=arms10,restoration6,battle1,rhythms9,warsong7 ; 1,2,3,4,5
+CombatOrder=amplification30,arms10,restoration6,rhythms9,warsong7 ; 4,1,2,3,5
 
 [Flag:DiseaseProtection]
-SpellBar=7:rhythms13
+SpellBar=5:rhythms13
 [Flag:2:Underwater:Twist]
 Order=accelerando5,restoration6,sustenance15 ; 8,2,7
-Order=arms10,restoration6,battle1,rhythms13,warsong7 ; 1,2,3,4,5
+CombatOrder=amplification30,arms10,restoration6,rhythms13,warsong7 ; 4,1,2,3,5
 [Flag:3:Underwater:Twist]
 Order=accelerando5,restoration6,sustenance15 ; 8,2,7
-Order=arms10,restoration6,battle1,rhythms13,warsong7 ; 1,2,3,4,5
+CombatOrder=amplification30,arms10,restoration6,rhythms13,warsong7 ; 4,1,2,3,5
 [Flag:4:Underwater:Twist]
 Order=accelerando5,restoration6,sustenance15 ; 8,2,7
-Order=arms10,restoration6,battle1,rhythms13,warsong7 ; 1,2,3,4,5
+CombatOrder=amplification30,arms10,restoration6,rhythms13,warsong7 ; 4,1,2,3,5
 
 [Flag:Underwater]
 SpellBar=8:ayre16
 [Flag:2:Underwater:Twist]
 Order=restoration6,ayre16
-Order=arms10,restoration6,battle1,rhythms17,warsong7,ayre16
+CombatOrder=amplification30,arms10,restoration6,rhythms17,warsong7,ayre16
 [Flag:3:Underwater:Twist]
 Order=restoration6,ayre16
-Order=arms10,restoration6,battle1,rhythms17,warsong7,ayre16
+CombatOrder=amplification30,arms10,restoration6,rhythms17,warsong7,ayre16
 [Flag:4:Underwater:Twist]
 Order=restoration6,ayre16
-Order=arms10,restoration6,battle1,rhythms17,warsong7,ayre16
+CombatOrder=amplification30,arms10,restoration6,rhythms17,warsong7,ayre16
 
 
 [Spells]
@@ -112,3 +112,7 @@ ayre16=            Tarew's Aquatic Ayre               ;Utility Beneficial,Misc,G
 lullaby15=         Kelin's Lucid Lullaby              ;Utility Detrimental,Enthrall,Single
 sustenance15=      Song of Sustenance                 ;Utility Beneficial,Misc,Group v2
 rhythms13=         Purifying Rhythms                  ;Statistic Buffs,Resist Buff,Group v2
+chain23=           Selo's Consonant Chain             ;Utility Detrimental,Slow,Single
+clarity20=         Cassindra's Chant of Clarity       ;Regen,Mana,Group v2
+strike28=          Crission's Pixie Strike            ;Utility Detrimental,Enthrall,Single
+amplification30=   Amplification                      ;Utility Beneficial,Misc,Self
