--- a/config/Bot_Timmaayy.ini
+++ b/config/Bot_Timmaayy.ini
@@ -65,12 +65,12 @@ MainTank=b_ac,b_manaregen
 Caster=b_manaregen
 Healer=b_manaregen
 Pet=b_ac
-Self=b_selfhp,b_ac,sight10
+Self=b_selfhp,b_ac,ultravision27
 
 [Mode:3:Buff]
 MainTank=b_ac
 Pet=b_ac
-Self=b_selfhp,b_ac,sight10
+Self=b_selfhp,b_ac,ultravision27
 
 [Mode:4:Buff]
 MinMana=30
@@ -78,7 +78,7 @@ MainTank=b_str,b_haste,b_manaregen
 Caster=advancement11,b_manaregen
 Healer=b_manaregen
 Pet=b_ac,b_str
-Self=b_selfhp,b_ac,sight10,advancement11
+Self=b_selfhp,b_ac,ultravision27,advancement11
 
 
 [Spells]
@@ -143,3 +143,22 @@ disempower16=      Disempower                         ;Utility Detrimental,Disem
 shielding16=       Shielding                          ;HP Buffs,Shielding,Self
 cloud17=           Cloud                              ;Statistic Buffs,Armor Class,Single
 breath12=          Enduring Breath                    ;Utility Beneficial,Misc,Single
+might19=           Feckless Might                     ;Utility Detrimental,Disempowering,Single
+alacrity21=        Alacrity                           ;Utility Beneficial,Haste,Single
+flux21=            Chaos Flux                         ;Direct Damage,Magic,Single
+beguile23=         Beguile                            ;Utility Detrimental,Charm,Single
+enchantment22=     Strip Enchantment                  ;Utility Detrimental,Dispel,Single
+deeds23=           Tepid Deeds                        ;Utility Detrimental,Slow,Single
+shielding23=       Major Shielding                    ;HP Buffs,Shielding,Self
+instill25=         Instill                            ;Utility Detrimental,Root,Single
+mind26=            Curse of the Simple Mind           ;Utility Detrimental,Disempowering,Single
+suffocate26=       Suffocate                          ;Damage Over Time,Magic,Single
+feedback25=        Feedback                           ;Utility Beneficial,Damage Shield,Single
+power25=           Listless Power                     ;Utility Detrimental,Disempowering,Single
+clarity26=         Clarity                            ;Regen,Mana,Single
+visage26=          Haunting Visage                    ;Utility Beneficial,Visages,Single
+entrance30=        Entrance                           ;Utility Detrimental,Enthrall,Single
+augmentation28=    Augmentation                       ;Utility Beneficial,Haste,Single
+draught28=         Dyn's Dizzying Draught             ;Direct Damage,Stun,Single
+obscure27=         Obscure                            ;Statistic Buffs,Armor Class,Single
+ultravision27=     Ultravision                        ;Utility Beneficial,Vision,Single
