--- a/config/Bot_Efotsi.ini
+++ b/config/Bot_Efotsi.ini
@@ -1,7 +1,7 @@
 [State]
 Mode=2
-Flags=
-Tether=17122
+Flags=DebuffOn
+Tether=219
 
 [Default:CastQueue]
 Print=TRUE
@@ -29,7 +29,7 @@ Backoff=TRUE
 BackoffTimer=300
 
 [Default]
-SpellBar=1:s_heal,2:db_slow,3:dot_poi,4:dot_dis,5:dd_cold,6:OPEN,7:OPEN,8:OPEN
+SpellBar=1:s_heal,2:db_slow,3:db_disem,4:dot_poi,5:dot_dis,6:dd_cold,7:OPEN,8:OPEN
 
 [Default:Heal]
 Enabled=TRUE
@@ -51,7 +51,7 @@ Pcts=dd_cold:50
 Enabled=FALSE
 MinMana=50
 MinTargetHpPct=65
-Pcts=db_slow:100
+Pcts=db_slow:100,db_disem:95
 
 [Default:Dot]
 Enabled=FALSE
@@ -73,11 +73,22 @@ Caster=wolf9,levitate10,fire1
 Self=wolf9,levitate10,fire1,b_sta
 
 [Mode:4:Buff]
-MainTank=fire1,b_dex,b_str,b_sta,b_ac,b_agi
+MinMana=40
+MainTank=fire1,b_dex,b_str,b_sta,b_ac,b_agi,b_regen,b_haste
 Puller=wolf9
-Melee=fire1,b_str
+Melee=fire1,b_str,b_haste
 Caster=fire1
-Self=fire1,b_sta
+Self=fire1,b_sta,b_selfbear
+
+
+[Flag:DDOn:DD]
+Enabled=TRUE
+
+[Flag:DebuffOn:Debuff]
+Enabled=TRUE
+
+[Flag:DotOn:Dot]
+Enabled=TRUE
 
 
 [Spells]
@@ -95,6 +106,7 @@ dot_mag=Damage Over Time,Magic,Single
 
 b_shield=HP Buffs,Shielding,Single
 b_regen=Regen,Health,Single
+b_haste=Utility Beneficial,Haste,Single
 b_ac=Statistic Buffs,Armor Class,Single
 b_agi=Statistic Buffs,Agility,Single
 b_sta=Statistic Buffs,Stamina,Single
@@ -141,3 +153,21 @@ disempower12=      Disempower                         ;Utility Detrimental,Disem
 cat18=             Spirit of Cat                      ;Statistic Buffs,Agility,Single
 strength18=        Spirit Strength                    ;Statistic Buffs,Strength,Single
 malaise18=         Malaise                            ;Utility Detrimental,Resist Debuffs,Single
+cannibalize23=     Cannibalize                        ;Utility Beneficial,Conversions,Self
+regeneration23=    Regeneration                       ;Regen,Health,Single
+ox21=              Spirit of Ox                       ;Statistic Buffs,Stamina,Single
+disease22=         Counteract Disease                 ;Heals,Cure,Single
+strike23=          Frost Strike                       ;Direct Damage,Cold,Single
+monkey21=          Spirit of Monkey                   ;Statistic Buffs,Dexterity,Single
+healing19=         Healing                            ;Heals,Heals,Single
+protect20=         Protect                            ;Statistic Buffs,Armor Class,Single
+bear25=            Form of the Bear                   ;Utility Beneficial,Illusion: Other,Self
+dexterity25=       Rising Dexterity                   ;Statistic Buffs,Dexterity,Single
+quickness26=       Quickness                          ;Utility Beneficial,Haste,Single
+breath24=          Envenomed Breath                   ;Damage Over Time,Poison,Single
+insects27=         Tagar's Insects                    ;Utility Detrimental,Slow,Single
+invisibility27=    Invisibility                       ;Utility Beneficial,Invisibility,Single
+strength28=        Raging Strength                    ;Statistic Buffs,Strength,Single
+healing29=         Greater Healing                    ;Heals,Heals,Single
+power29=           Listless Power                     ;Utility Detrimental,Disempowering,Single
+health30=          Health                             ;Statistic Buffs,Stamina,Single
