crowdcontrolbot will use DanNet for pet targets Speed tweaks Added /drive cast

--- a/config/Bot_Efotsi.ini
+++ b/config/Bot_Efotsi.ini
@@ -1,7 +1,7 @@
 [State]
 Mode=2
-Flags=DebuffOn
-Tether=219
+Flags=DotOn,DDOn
+Tether=25432
 
 [Default:CastQueue]
 Print=TRUE
@@ -83,11 +83,17 @@ Self=fire1,b_sta,b_selfbear
 
 [Flag:DDOn:DD]
 Enabled=TRUE
+[Flag:4:DDOn:DD]
+Enabled=TRUE
 
 [Flag:DebuffOn:Debuff]
 Enabled=TRUE
+[Flag:4:DebuffOn:DD]
+Enabled=TRUE
 
 [Flag:DotOn:Dot]
+Enabled=TRUE
+[Flag:4:DotOn:DD]
 Enabled=TRUE
 
 
