--- a/config/Bot_Vubelar.ini
+++ b/config/Bot_Vubelar.ini
@@ -1,7 +1,7 @@
 [State]
 Mode=2
 Flags=CC2
-Tether=13506
+Tether=24913
 
 [Default:CastQueue]
 Print=TRUE
@@ -62,6 +62,10 @@ Selfpet=velocity58
 MainTank=b_dsh
 Self=b_groupdsh,b_selfregen,b_selfshield
 Selfpet=b_pethaste,b_petblock,b_petaura,velocity58
+
+
+[Flag:PrintOff:CastQueue]
+Print=FALSE
 
 
 [Spells]
