--- a/config/Bot_Weradan.ini
+++ b/config/Bot_Weradan.ini
@@ -1,7 +1,7 @@
 [State]
 Mode=2
 Flags=CC2
-Tether=13506
+Tether=24913
 
 [Default:Tether]
 Mode=ACTIVE
@@ -61,6 +61,13 @@ SpellBar=9:amplification30
 Enabled=TRUE
 Order=amplification30,shielding41,replenishment55,sustenance15 ; 9,5,7,6
 CombatOrder=amplification30,binding51,rondo57,shir60,binding51,shielding41,fire53,replenishment55,sustenance15 ; 9,2,3,4,2,5,8,7,6
+
+
+[Flag:PrimaryCC:CrowdControl]
+IAmPrimary=TRUE
+
+[Flag:PrintOff:CastQueue]
+Print=FALSE
 
 
 [Spells]
