--- a/config/Bot_Xamox.ini
+++ b/config/Bot_Xamox.ini
@@ -1,6 +1,6 @@
 [State]
 Mode=2
-Flags=CC2
+Flags=PrintOff
 Tether=NONE
 
 [Default:Tether]
@@ -46,7 +46,7 @@ MinMana=5
 Self=h_lifetap:90
 
 [Default:DD]
-Enabled=TRUE
+Enabled=FALSE
 MinMana=30
 MinTargetHpPct=0
 Pcts=aggro:100,dd_disease:95
@@ -61,6 +61,10 @@ Pcts=hate54:100,dot_dis:94
 [Mode:4:Buff]
 Self=akheva60,terris60,darkness54,aura16,chaos63
 Selfpet=b_pethaste
+
+
+[Flag:PrintOff:CastQueue]
+Print=FALSE
 
 
 [Spells]
