--- a/config/Bot_Yaladil.ini
+++ b/config/Bot_Yaladil.ini
@@ -1,7 +1,7 @@
 [State]
 Mode=2
-Flags=CC2
-Tether=13506
+Flags=CC2,PrintOff
+Tether=24913
 
 [Default:CastQueue]
 Print=TRUE
@@ -80,6 +80,13 @@ Pcts=magic53:100,db_res:97
 SpellBar=1:apathy61
 [Flag:4:CC2:CrowdControl]
 Spell=apathy61
+
+
+[Flag:SecondaryCC:CrowdControl]
+IAmPrimary=FALSE
+
+[Flag:PrintOff:CastQueue]
+Print=FALSE
 
 
 [Spells]
