--- a/config/Bot_Zasratas.ini
+++ b/config/Bot_Zasratas.ini
@@ -1,7 +1,7 @@
 [State]
 Mode=2
-Flags=CC2
-Tether=13506
+Flags=CC2,PrintOff
+Tether=24913
 
 [Default:CastQueue]
 Print=TRUE
@@ -31,8 +31,8 @@ BackoffTimer=300
 [Default:TeamEvents]
 OnPullStart=
 OnPullEnd=
-OnPreEngage=/dbcq queue -spell|Traps,Resist Debuffs,Self -priority|39 -unique|true
-OnEngage=/dbcq queue -spell|Utility Beneficial,Combat Innates,Single in Group -priority|49 -target_id|${Group.MainTank.ID} -max_tries|3 -unique|true
+OnPreEngage=/drive cast -spell|malo55 -priority|39
+OnEngage=/drive cast -spell|jaguar57 -priority|49 -target|Group.MainTank.ID -max_tries|3 -unique|true
 
 [Default]
 SpellBar=1:chloroblast55,2:dot_poi,3:dot_dis,4:dot_mag,5:jaguar57,6:torpor60,7:OPEN,8:insects51,9:malo55
@@ -96,6 +96,10 @@ Pcts=dot_dis:100,dot_poi:94
 MinMana=75
 [Flag:4:WeakSauce:Dot]
 MinMana=75
+
+
+[Flag:PrintOff:CastQueue]
+Print=FALSE
 
 
 [Spells]
