Performance tweaks and bug fixes

--- a/config/Bot_Efotsi.ini
+++ b/config/Bot_Efotsi.ini
@@ -1,7 +1,7 @@
 [State]
 Mode=2
 Flags=DotOn,DDOn
-Tether=25432
+Tether=NONE
 
 [Default:CastQueue]
 Print=TRUE
@@ -15,8 +15,8 @@ OverrideOnMove=FALSE
 OverrideSeconds=10
 
 [Default:Pet]
-AutoCast=FALSE
-AutoAttack=FALSE
+AutoCast=TRUE
+AutoAttack=TRUE
 Type=Warder
 MinMana=20
 EngageTargetHpPct=95
@@ -68,17 +68,17 @@ Self=fire1,b_sta
 
 [Mode:3:Buff]
 MainTank=wolf9,levitate10,fire1,b_sta
-Melee=wolf9,levitate10,fire1,b_str
+Melee=wolf9,levitate10,fire1
 Caster=wolf9,levitate10,fire1
-Self=wolf9,levitate10,fire1,b_sta
+Self=wolf9,levitate10,fire1,b_sta,b_groupstr
 
 [Mode:4:Buff]
 MinMana=40
-MainTank=fire1,b_dex,b_str,b_sta,b_ac,b_agi,b_regen,b_haste
+MainTank=fire1,b_dex,b_sta,b_ac,b_agi,b_regen,b_haste,b_shield
 Puller=wolf9
-Melee=fire1,b_str,b_haste
+Melee=fire1,b_haste
 Caster=fire1
-Self=fire1,b_sta,b_selfbear
+Self=fire1,b_sta,b_selfbear,b_groupstr
 
 
 [Flag:DDOn:DD]
@@ -177,3 +177,13 @@ strength28=        Raging Strength                    ;Statistic Buffs,Strength,
 healing29=         Greater Healing                    ;Heals,Heals,Single
 power29=           Listless Power                     ;Utility Detrimental,Disempowering,Single
 health30=          Health                             ;Statistic Buffs,Stamina,Single
+strength35=        Tumultuous Strength                ;Statistic Buffs,Strength,Group v2
+tainted34=         Shock of the Tainted               ;Direct Damage,Poison,Single
+curse34=           Curse                              ;Damage Over Time,Magic,Single
+roar33=            Winter's Roar                      ;Direct Damage,Cold,Single
+spirit32=          Companion Spirit                   ;Pet,Sum: Warder,Self
+tnarg32=           Talisman of Tnarg                  ;HP Buffs,Shielding,Single
+malaisement32=     Malaisement                        ;Utility Detrimental,Resist Debuffs,Single
+shield31=          Shifting Shield                    ;Statistic Buffs,Armor Class,Single
+nimble31=          Nimble                             ;Statistic Buffs,Agility,Single
+scourge31=         Scourge                            ;Damage Over Time,Disease,Single
