--- a/config/Bot_Pystoffe.ini
+++ b/config/Bot_Pystoffe.ini
@@ -1,7 +1,7 @@
 [State]
 Mode=2
 Flags=
-Tether=25432
+Tether=NONE
 
 [Default:AutoSit]
 Enabled=TRUE
@@ -16,7 +16,7 @@ EngageTargetHPs=98
 EngageTargetDistance=150
 
 [Default]
-SpellBar=1:s_mez,2:arms10,3:clarity20,4:amplification30,5:rhythms17,6:warsong7,7:sustenance15,8:accelerando5
+SpellBar=1:s_mez,2:arms10,3:soothing34,4:amplification30,5:rhythms17,6:warsong7,7:sustenance15,8:accelerando5
 
 [Default:Buff]
 Enabled=FALSE
@@ -35,8 +35,8 @@ Spell=s_mez
 
 [Mode:2:Twist]
 Enabled=TRUE
-Order=accelerando5,clarity20,sustenance15 ; 8,3,7
-CombatOrder=amplification30,accelerando5,arms10,clarity20,rhythms17,warsong7 ; 4,8,2,3,5,6
+Order=accelerando5,soothing34,sustenance15 ; 8,3,7
+CombatOrder=amplification30,accelerando5,arms10,soothing34,rhythms17,warsong7 ; 4,8,2,3,5,6
 
 
 ; [Mode:3]
@@ -44,17 +44,17 @@ CombatOrder=amplification30,accelerando5,arms10,clarity20,rhythms17,warsong7 ; 4
 
 [Mode:3:Twist]
 Enabled=TRUE
-Order=accelerando5,clarity20,sustenance15 ; 8,3,7
-CombatOrder=amplification30,accelerando5,arms10,clarity20,rhythms17,warsong7 ; 4,8,2,3,5,6
+Order=accelerando5,soothing34,sustenance15 ; 8,3,7
+CombatOrder=amplification30,accelerando5,arms10,soothing34,rhythms17,warsong7 ; 4,8,2,3,5,6
 
 
 [Mode:4]
-SpellBar=3:clarity20,8:chain23
+SpellBar=3:soothing34,8:chain23
 
 [Mode:4:Twist]
 Enabled=TRUE
-Order=clarity20,sustenance15 ; 3,7
-CombatOrder=amplification30,chain23,arms10,clarity20,chain23,rhythms17,warsong7 ; 4,8,2,3,8,5,6
+Order=soothing34,sustenance15 ; 3,7
+CombatOrder=amplification30,chain23,arms10,soothing34,chain23,rhythms17,warsong7 ; 4,8,2,3,8,5,6
 
 
 [Flag:ElementalProtection]
@@ -116,3 +116,5 @@ chain23=           Selo's Consonant Chain             ;Utility Detrimental,Slow,
 clarity20=         Cassindra's Chant of Clarity       ;Regen,Mana,Group v2
 strike28=          Crission's Pixie Strike            ;Utility Detrimental,Enthrall,Single
 amplification30=   Amplification                      ;Utility Beneficial,Misc,Self
+clarity32=         Cassindra's Chorus of Clarity      ;Regen,Mana,Group v2
+soothing34=        Cantata of Soothing                ;Regen,Health/Mana,Group v2
