--- a/config/Bot_Timmaayy.ini
+++ b/config/Bot_Timmaayy.ini
@@ -62,10 +62,10 @@ Pcts=db_disp:100,db_slow:99
 
 [Mode:2:Buff]
 MainTank=b_ac,b_manaregen
-Caster=b_manaregen
-Healer=b_manaregen
+Caster=b_manaregen,b_mana,b_intwis
+Healer=b_manaregen,b_mana,b_intwis
 Pet=b_ac
-Self=b_selfhp,b_ac,ultravision27
+Self=b_selfhp,b_ac,ultravision27,b_mana,b_intwis
 
 [Mode:3:Buff]
 MainTank=b_ac
@@ -75,18 +75,21 @@ Self=b_selfhp,b_ac,ultravision27
 [Mode:4:Buff]
 MinMana=30
 MainTank=b_str,b_haste,b_manaregen
-Caster=advancement11,b_manaregen
-Healer=b_manaregen
+ShadowKnight=b_mana,b_intwis
+Caster=advancement11,b_manaregen,b_mana,b_intwis
+Healer=b_manaregen,b_mana,b_intwis
 Pet=b_ac,b_str
-Self=b_selfhp,b_ac,ultravision27,advancement11
+Self=b_selfhp,b_ac,ultravision27,advancement11,b_mana,b_intwis,elemental33
 
 
 [Spells]
 b_selfhp=HP Buffs,Shielding,Self
 b_ac=Statistic Buffs,Armor Class,Single
 b_str=Statistic Buffs,Strength,Single
+b_mana=Statistic Buffs,Mana,Single
 b_manaregen=Regen,Mana,Single
 b_haste=Utility Beneficial,Haste,Single
+b_intwis=Statistic Buffs,Wisdom/Intelligence,Single
 
 db_slow=Utility Detrimental,Slow,Single
 db_disem=Utility Detrimental,Disempowering,Single
@@ -162,3 +165,9 @@ augmentation28=    Augmentation                       ;Utility Beneficial,Haste,
 draught28=         Dyn's Dizzying Draught             ;Direct Damage,Stun,Single
 obscure27=         Obscure                            ;Statistic Buffs,Armor Class,Single
 ultravision27=     Ultravision                        ;Utility Beneficial,Vision,Single
+insight35=         Insight                            ;Statistic Buffs,Wisdom/Intelligence,Single
+magic34=           Gift of Magic                      ;Statistic Buffs,Mana,Single
+weakness34=        Insipid Weakness                   ;Utility Detrimental,Disempowering,Single
+elemental33=       Illusion: Fire Elemental           ;Utility Beneficial,Illusion: Other,Self
+anarchy32=         Anarchy                            ;Direct Damage,Magic,Single
+shielding31=       Greater Shielding                  ;HP Buffs,Shielding,Self
