--- a/config/Bot_Vubelar.ini
+++ b/config/Bot_Vubelar.ini
@@ -1,7 +1,7 @@
 [State]
 Mode=2
 Flags=CC2
-Tether=24913
+Tether=NONE
 
 [Default:CastQueue]
 Print=TRUE
@@ -229,3 +229,7 @@ marr62=            Servant of Marr                    ;Pet,Sum: Water,Self
 v62=               Burnout V                          ;Pet,Pet Haste,Pet
 sand62=            Burning Sand                       ;Direct Damage,Fire,Single
 tallon61=          Firebolt of Tallon                 ;Direct Damage,Fire,Line of Sight
+vortex65=          Sun Vortex                         ;Direct Damage,Fire,Single
+taelosia65=        Rock of Taelosia                   ;Direct Damage,Magic,Single
+magikot64=         Girdle of Magi`Kot                 ;Create Item,Misc,Self
+kedge63=           Blade of The Kedge                 ;Create Item,Misc,Self
