--- a/config/Bot_Weradan.ini
+++ b/config/Bot_Weradan.ini
@@ -1,7 +1,11 @@
 [State]
 Mode=2
 Flags=CC2
-Tether=24913
+Tether=NONE
+
+[Default:CastQueue]
+Print=TRUE
+PrintTimer=10
 
 [Default:Tether]
 Mode=ACTIVE
@@ -10,7 +14,7 @@ FollowMaxDistance=15
 ReturnTimer=5
 
 [Default:AutoSit]
-Enabled=TRUE
+Enabled=FALSE
 MinHPs=95
 MinMana=95
 OverrideOnMove=FALSE
