--- a/config/Bot_Xamox.ini
+++ b/config/Bot_Xamox.ini
@@ -38,7 +38,7 @@ BackoffTimer=300
 
 
 [Default]
-SpellBar=1:h_lifetap,2:aggro,3:pain63,4:hate54,5:dot_snare,6:dot_dis,7:dd_disease,8:terris60,9:OPEN
+SpellBar=1:h_lifetap,2:aggro,3:hate65,4:hate54,5:dot_snare,6:dot_dis,7:dd_disease,8:b_aggro,9:OPEN
 
 [Default:Heal]
 Enabled=TRUE
@@ -59,12 +59,22 @@ Pcts=hate54:100,dot_dis:94
 
 
 [Mode:4:Buff]
-Self=akheva60,terris60,darkness54,aura16,chaos63
+Self=b_selfshield,b_aggro,darkness54,shroud65
 Selfpet=b_pethaste
 
 
 [Flag:PrintOff:CastQueue]
 Print=FALSE
+
+[Flag:AggroToAC]
+SpellBar=3:pain63
+[Flag:AggroToAttackRating]
+SpellBar=3:hate65
+
+[Flag:4:LifeSteal:Buff] ; Need a way to additively overlay Self
+Self=shroud65
+[Flag:4:DrainLifeForAttackRating:Buff] ; Need a way to additively overlay Self
+Self=darkness54
 
 
 [Spells]
@@ -74,6 +84,8 @@ h_lifetap=Taps,Health,LifeTap
 dot_snare=Damage Over Time,Snare,Single
 dot_dis=Damage Over Time,Disease,Single
 b_pethaste=Pet,Pet Haste,Pet
+b_selfshield=HP Buffs,Shielding,Self
+b_aggro=Utility Beneficial,Visages,Single
 
 disease1=          Spike of Disease                   ;Direct Damage,Disease,Single
 dead2=             Sense the Dead                     ;Utility Beneficial,Misc,Self
@@ -171,3 +183,9 @@ hate63=            Blood of Hate                      ;Damage Over Time,Poison,S
 death64=           Invoke Death                       ;Pet,Sum: Undead,Self
 decay64=           Spear of Decay                     ;Direct Damage,Disease,Single
 undead62=          Deny Undead                        ;Direct Damage,Undead,Undead
+shroud65=          Black Shroud                       ;Utility Beneficial,Combat Innates,Self
+hate65=            Aura of Hate                       ;Taps,Power Tap,Single
+innoruuk65=        Touch of Innoruuk                  ;Taps,Health,LifeTap
+luclin65=          Cloak of Luclin                    ;HP Buffs,Shielding,Self
+thule65=           Voice of Thule                     ;Utility Beneficial,Visages,Single
+spear65=           Miasmic Spear                      ;Direct Damage,Disease,Single
