--- a/config/Bot_Zasratas.ini
+++ b/config/Bot_Zasratas.ini
@@ -1,7 +1,7 @@
 [State]
 Mode=2
 Flags=CC2,PrintOff
-Tether=24913
+Tether=NONE
 
 [Default:CastQueue]
 Print=TRUE
@@ -103,6 +103,8 @@ Print=FALSE
 
 
 [Spells]
+h_single=Heals,Heals,Single,2
+
 dd_cold=Direct Damage,Cold,Single
 dd_poi=Direct Damage,Poison,Single
 dd_fire=Direct Damage,Fire,Single
