Added mag summon stuff for pets Added additive items and open gem fills for flags

--- a/config/Bot_Pystoffe.ini
+++ b/config/Bot_Pystoffe.ini
@@ -1,7 +1,7 @@
 [State]
 Mode=2
 Flags=
-Tether=NONE
+Tether=17610
 
 [Default:AutoSit]
 Enabled=TRUE
@@ -11,9 +11,9 @@ OverrideOnMove=FALSE
 OverrideSeconds=10
 
 [Default:Melee]
-Enabled=TRUE
+Enabled=FALSE
 EngageTargetHPs=98
-EngageTargetDistance=150
+EngageTargetDistance=180
 
 [Default]
 SpellBar=1:s_mez,2:arms10,3:soothing34,4:amplification30,5:rhythms17,6:warsong7,7:sustenance15,8:accelerando5
