--- a/config/Bot_Timmaayy.ini
+++ b/config/Bot_Timmaayy.ini
@@ -26,7 +26,7 @@ EngageTargetDistance=75
 Enabled=TRUE
 MinMana=70
 Backoff=TRUE
-BackoffTimer=300
+BackoffTimer=900
 
 [Default]
 SpellBar=1:s_mez,2:db_slow,3:db_disem,4:dot_mag,5:dd_stun,6:dd_mag,7:root6,8:OPEN
@@ -74,7 +74,7 @@ Self=b_selfhp,b_ac,ultravision27
 
 [Mode:4:Buff]
 MinMana=30
-MainTank=b_str,b_haste,b_manaregen
+MainTank=b_haste,b_manaregen
 ShadowKnight=b_mana,b_intwis
 Caster=advancement11,b_manaregen,b_mana,b_intwis
 Healer=b_manaregen,b_mana,b_intwis
