--- a/config/Bot_Xamox.ini
+++ b/config/Bot_Xamox.ini
@@ -1,6 +1,6 @@
 [State]
 Mode=2
-Flags=PrintOff
+Flags=PrintOff,AggroToAttackRating,LifeSteal
 Tether=NONE
 
 [Default:Tether]
@@ -38,7 +38,7 @@ BackoffTimer=300
 
 
 [Default]
-SpellBar=1:h_lifetap,2:aggro,3:hate65,4:hate54,5:dot_snare,6:dot_dis,7:dd_disease,8:b_aggro,9:OPEN
+SpellBar=1:h_lifetap,2:aggro,3:OPEN,4:hate54,5:dot_snare,6:dot_dis,7:dd_disease,8:b_aggro,9:OPEN
 
 [Default:Heal]
 Enabled=TRUE
@@ -67,14 +67,14 @@ Selfpet=b_pethaste
 Print=FALSE
 
 [Flag:AggroToAC]
-SpellBar=3:pain63
+SpellBar=O:pain63
 [Flag:AggroToAttackRating]
-SpellBar=3:hate65
+SpellBar=O:hate65
 
-[Flag:4:LifeSteal:Buff] ; Need a way to additively overlay Self
-Self=shroud65
-[Flag:4:DrainLifeForAttackRating:Buff] ; Need a way to additively overlay Self
-Self=darkness54
+[Flag:4:LifeSteal:Buff]
+Self=+shroud65
+[Flag:4:DrainLifeForAttackRating:Buff]
+Self=+darkness54
 
 
 [Spells]
