--- a/config/Bot_Zasratas.ini
+++ b/config/Bot_Zasratas.ini
@@ -1,7 +1,7 @@
 [State]
 Mode=2
 Flags=CC2,PrintOff
-Tether=NONE
+Tether=22133
 
 [Default:CastQueue]
 Print=TRUE
@@ -308,3 +308,4 @@ focusing60=        Khura's Focusing                   ;HP Buffs,Shielding,Group 
 avatar60=          Primal Avatar                      ;Statistic Buffs,Attack,Single
 replenishment61=   Replenishment                      ;Regen,Health,Single
 spirit61=          True Spirit                        ;Pet,Sum: Warder,Self
+anew59=            Incarnate Anew                     ;Heals,Resurrection,Corpse
